--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,3 +1,4 @@
 <% @ingredients.each do |ingredient| %>
 <li><%=ingredient.name %></li>
 <%end%>
+<button class="js-meals">Ingrients in Dinner!</button></li>
