--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   <%= content_tag(:div, flash[:notice], :id => "flash_notice") if flash[:notice] %>
   <%= content_tag(:div, flash[:alert], :id => "flash_alert") if flash[:alert] %>
 
-  <body>
-    <div class="container">
+  <body class="container">
+    <div>
       <%=render partial: "layouts/navbar" %>
       <div id="app-container">
     <%= yield %>
