--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,4 +1,6 @@
+<div class ="show">
 <% @ingredients.each do |ingredient| %>
 <li><%=ingredient.name %></li>
 <%end%>
 <button class="js-meals">Ingrients in Dinner!</button></li>
+</div>
