--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -1,3 +1,4 @@
+<div class="show">
 <p>Ingredient: <%=@ingredient.name%></p>
 <%= link_to "Back to Recipes Home", recipes_path %><br>
 
@@ -6,7 +7,7 @@
 <li><%= link_to recipe.title, recipe_path(recipe) %></li>
 <%end%>
  <br></br>
-
+</div>
  <!--<%#if (current_user.recipes & @ingredient.recipes).any?%>-->
  <!--<%#=link_to "Edit this Ingredient", edit_ingredient_path(@ingredient) %>-->
 
