--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,3 +1,4 @@
-
-<h2> Edit this Recipe </h2>
+<div class="show">
+  <h2> Edit this Recipe </h2>
 <%= render 'form', locals: {recipe: @recipe, ingredients: @ingredients} %>
+</div>
