--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,7 +1,8 @@
-<h2> Recipes Home</h2>
+<div class="show">
+<h1 style="color:lightblue"> Recipes Home</h1>
 
     <% @recipes.each do |recipe| %>
-    <div class="container">
+
     <ul>
       <li>
         <%= link_to recipe.title, recipe_path(recipe)%>
@@ -9,15 +10,14 @@
           <ul id="recipe-<%= recipe.id%>">
           </ul>
     </ul>
-  </div>
 
 <%end%>
 
 <br>
-
 <%=link_to "Add a New Recipe", new_recipe_path %><br>
 <%= link_to "See my Recipes", user_path(current_user) %><br><br>
 
 <%#= link_to "Click here for all Ingredients in Alphabetical Order", alphabetical_path %>
 
 <%=link_to "Click here for all dinner Recipes", scope_path %>
+</div>
