--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,4 +1,5 @@
-
+<div class="show">
 <h2> Add a Recipe </h2>
 
 <%=render partial: 'form', locals: {recipe: @recipe, ingredients: @ingredients} %>
+</div>
