--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,44 @@
  @import "bootstrap";
 
  body.container {
- background: url("img.jpg") no-repeat center center fixed;
+ background: url("img4.jpg") no-repeat center center fixed;
  background-size :cover;
+ }
+
+ div.container {margin: 2%;
+   float: center;
+   background: white;
+   text-align: left;
+   padding: 10px;
+   width: 15%;
+   height: 200px;
+   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+   border-radius: 25px;
+ }
+ .show {margin: 2%;
+   float: center;
+   background: white;
+   text-align: left;
+   padding: 10px;
+   width: 50%;
+   height: 700px;
+   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+   border-radius: 25px;
+ }
+ .link {margin: 2%;
+   float: center;
+   background: white;
+   text-align: left;
+   padding: 10px;
+   width: 30%;
+   height: 75px;
+   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+   border-radius: 25px;
+ }
+
+ .navbar {
+
  }
