--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,11 @@
 
 <style>
-p.groove {border-style: groove;}
+p.groove {
+  background-color: white;
+  border-radius: 25px;
+  padding: 10px;
+  margin: 1%;
+}
 </style>
 <body>
 
