--- a/app/views/recipes/scope.html.erb
+++ b/app/views/recipes/scope.html.erb
@@ -1,4 +1,4 @@
-
+<div class="show">
 <!--<h1> Recipes that include the ingredient of cheese: </h1>-->
 <!--<%# @recipes.cheese.each do |r| %>-->
 <!--<li><%#= r.title %></li>-->
@@ -8,3 +8,4 @@
     <% @recipes.dinner.each do |r| %>
    <li> <%=r.title %></li>
     <%end%>
+</div>
