--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -2,5 +2,5 @@
 <% @ingredients.each do |ingredient| %>
 <li><%=ingredient.name %></li>
 <%end%>
-<button class="js-meals">Ingrients in Dinner!</button></li>
+<button class="js-meals">Ingredients in Dinner!</button></li>
 </div>
