--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="show">
 <h1> Welcome My Recipe journal! </h1>
 <%= render partial: "layouts/sign_in" %>
-    <%= link_to "Sign in with Github", user_github_omniauth_authorize_path %>
-  </div>  
+    <%#= link_to "Sign in with Github", user_github_omniauth_authorize_path %>
+  </div>
